--- a/GamersParadiseAPI/appsettings.json
+++ b/GamersParadiseAPI/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "MyConnection": "Server=.\\SQLEXPRESS; Database=MyForumTest; Trusted_Connection=True; Encrypt=false" //TODO: Byt till azuresträng
   },
-  "AllowedHosts": "*"
-}
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
