Published API on Azure

--- a/GamersParadiseAPI/appsettings.json
+++ b/GamersParadiseAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyConnection": "Server=.\\SQLEXPRESS; Database=MyForumTest; Trusted_Connection=True; Encrypt=false" //TODO: Byt till azuresträng
+    "MyConnection": "Server=tcp:gamersparadise.database.windows.net,1433;Initial Catalog=gamersparadiseapidb;Persist Security Info=False;User ID=gpadmin;Password=AdminAdmin1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
     "Logging": {
       "LogLevel": {
